--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -20,14 +20,14 @@ import textColors from '~/data/text-colors'
 | <Aa className="fg:teal" />`text-teal`             | -                                                                         |
 | <Aa className="fg:cyan" />`text-cyan`             | -                                                                         |
 | <Aa className="fg:sky" />`text-sky`               | -                                                                         |
-| <Aa className="fg:blue" />`text-blue`             | information, links.                                                       |
+| <Aa className="fg:blue" />`text-blue`             | information, links                                                        |
 | <Aa className="fg:indigo" />`text-indigo`         | -                                                                         |
 | <Aa className="fg:violet" />`text-violet`         | -                                                                         |
 | <Aa className="fg:purple" />`text-purple`         | -                                                                         |
 | <Aa className="fg:fuchsia" />`text-fuchsia`       | -                                                                         |
 | <Aa className="fg:pink" />`text-pink`             | -                                                                         |
-| <Aa className="fg:crimson" />`text-crimson`       | errors, danger text, and remove icons.                                    |
-| <Aa className="fg:red" />`text-red`               | errors, danger text, and remove icons.                                    |
+| <Aa className="fg:crimson" />`text-crimson`       | errors, danger text, remove icons                                         |
+| <Aa className="fg:red" />`text-red`               | errors, danger text, remove icons                                         |
 
 <details>
     <summary>View the default variables</summary>
@@ -43,13 +43,13 @@ By default, theme modes drive text variables meticulously adjusted in light and 
     <div class="light w:1/2">
         <div className="bg:base overflow:hidden">
             <div className="abs top:4x left:4x fg:lighter font:12">light</div>
-            <div className="fg:yellow fit font:heavy font:96 translateX(50%) float:right py:4x">A</div>
+            <div className="fg:yellow fit font:heavy font:96 translateX(50%) float:right py:8x">A</div>
         </div>
     </div>
     <div class="dark w:1/2">
         <div className="bg:base dark overflow:hidden">
             <div className="abs top:4x right:4x fg:lighter font:12">dark</div>
-            <div className="fg:yellow fit font:heavy font:96 translateX(-50%) float:left py:4x">A</div>
+            <div className="fg:yellow fit font:heavy font:96 translateX(-50%) float:left py:8x">A</div>
         </div>
     </div>
 </Demo>
