Update color tokens in base-colors and text-colors

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -1,7 +1,9 @@
 ## Default [sr-only]
 | Variable Token                                    | Keywords                                                                  |
 |---------------------------------------------------|---------------------------------------------------------------------------|
+| <small>Semantic</small>                                                                                                       |
 | <Bg className="bg:base" />`base`                  | background for page, modal                                                |
+| <small>Primitive</small>                                                                                                      |
 | <Bg className="bg:gray" />`gray`                  | -                                                                         |
 | <Bg className="bg:slate" />`slate`                | -                                                                         |
 | <Bg className="bg:brown" />`brown`                | -                                                                         |
