--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -1,11 +1,13 @@
 ## Default [sr-only]
 | Variable Token                                    | Keywords                                                                  |
 |---------------------------------------------------|---------------------------------------------------------------------------|
+| <small>Semantic</small>                                                                                                       |
 | <Aa className="fg:strong" />`text-strong`         | page titles, subheadings, emphasized fields                               |
 | <Aa className="fg:neutral" />`text-neutral`       | body text, descriptions, and general content                              |
 | <Aa className="fg:light" />`text-light`           | light color, icons                                                        |
 | <Aa className="fg:lighter" />`text-lighter`       | lighter color, icons                                                      |
 | <Aa className="fg:lightest" />`text-lightest`     | dim color, placeholder, disabled text                                     |
+| <small>Primitive</small>                                                                                                      |
 | <Aa className="fg:gray" />`text-gray`             | -                                                                         |
 | <Aa className="fg:slate" />`text-slate`           | -                                                                         |
 | <Aa className="fg:brown" />`text-brown`           | -                                                                         |
