Update text color descriptions

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -4,26 +4,26 @@
 | <small>Semantic</small>                                                                                                       |
 | <Bg className="bg:base" />`base`                  | background for page, modal                                                |
 | <small>Primitive</small>                                                                                                      |
-| <Bg className="bg:gray" />`gray`                  | -                                                                         |
-| <Bg className="bg:slate" />`slate`                | -                                                                         |
-| <Bg className="bg:brown" />`brown`                | -                                                                         |
-| <Bg className="bg:orange" />`orange`              | -                                                                         |
-| <Bg className="bg:amber" />`amber`                | -                                                                         |
-| <Bg className="bg:yellow" />`yellow`              | -                                                                         |
-| <Bg className="bg:lime" />`lime`                  | -                                                                         |
-| <Bg className="bg:green" />`green`                | success, pay                                                              |
-| <Bg className="bg:beryl" />`beryl`                | -                                                                         |
-| <Bg className="bg:teal" />`teal`                  | -                                                                         |
-| <Bg className="bg:cyan" />`cyan`                  | -                                                                         |
-| <Bg className="bg:sky" />`sky`                    | -                                                                         |
-| <Bg className="bg:blue" />`blue`                  | -                                                                         |
-| <Bg className="bg:indigo" />`indigo`              | -                                                                         |
-| <Bg className="bg:violet" />`violet`              | -                                                                         |
-| <Bg className="bg:purple" />`purple`              | -                                                                         |
-| <Bg className="bg:fuchsia" />`fuchsia`            | -                                                                         |
-| <Bg className="bg:pink" />`pink`                  | -                                                                         |
-| <Bg className="bg:crimson" />`crimson`            | -                                                                         |
-| <Bg className="bg:red" />`red`                    | delete, remove, danger                                                    |
+| <Bg className="bg:gray" />`gray`                  | neutral, subtle, muted                                                    |
+| <Bg className="bg:slate" />`slate`                | cool, calm, sophisticated                                                 |
+| <Bg className="bg:brown" />`brown`                | earthy, warm, rustic                                                      |
+| <Bg className="bg:orange" />`orange`              | vibrant, energetic, lively                                                 |
+| <Bg className="bg:amber" />`amber`                | warm, glowing, radiant                                                     |
+| <Bg className="bg:yellow" />`yellow`              | cheerful, sunny, bright                                                    |
+| <Bg className="bg:lime" />`lime`                  | fresh, lively, zesty                                                       |
+| <Bg className="bg:green" />`green`                | nature, growth, harmony                                                    |
+| <Bg className="bg:beryl" />`beryl`                | calm, soothing, tranquil                                                   |
+| <Bg className="bg:teal" />`teal`                  | sophisticated, elegant, refined                                            |
+| <Bg className="bg:cyan" />`cyan`                  | modern, futuristic, technological                                          |
+| <Bg className="bg:sky" />`sky`                    | peaceful, serene, tranquil                                                 |
+| <Bg className="bg:blue" />`blue`                  | calm, trustworthy, reliable                                                |
+| <Bg className="bg:indigo" />`indigo`              | mysterious, deep, spiritual                                                |
+| <Bg className="bg:violet" />`violet`              | creative, imaginative, magical                                             |
+| <Bg className="bg:purple" />`purple`              | royal, luxurious, majestic                                                 |
+| <Bg className="bg:fuchsia" />`fuchsia`            | vibrant, bold, playful                                                     |
+| <Bg className="bg:pink" />`pink`                  | feminine, romantic, delicate                                               |
+| <Bg className="bg:crimson" />`crimson`            | passionate, intense, powerful                                              |
+| <Bg className="bg:red" />`red`                    | bold, energetic, attention-grabbing                                        |
 
 By default, theme modes [drive](/docs/configuration#themedriver) base color variables meticulously adjusted in light and dark modes.
 <Demo $py={0} $px={0}>
