--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -8,26 +8,26 @@
 | <Aa className="fg:lighter" />`text-lighter`       | lighter color, icons                                                      |
 | <Aa className="fg:lightest" />`text-lightest`     | dim color, placeholder, disabled text                                     |
 | <small>Primitive</small>                                                                                                      |
-| <Aa className="fg:gray" />`text-gray`             | -                                                                         |
-| <Aa className="fg:slate" />`text-slate`           | -                                                                         |
-| <Aa className="fg:brown" />`text-brown`           | -                                                                         |
-| <Aa className="fg:orange" />`text-orange`         | warnings                                                                  |
-| <Aa className="fg:amber" />`text-amber`           | -                                                                         |
-| <Aa className="fg:yellow" />`text-yellow`         | -                                                                         |
-| <Aa className="fg:lime" />`text-lime`             | -                                                                         |
-| <Aa className="fg:green" />`text-green`           | success                                                                   |
-| <Aa className="fg:beryl" />`text-beryl`           | -                                                                         |
-| <Aa className="fg:teal" />`text-teal`             | -                                                                         |
-| <Aa className="fg:cyan" />`text-cyan`             | -                                                                         |
-| <Aa className="fg:sky" />`text-sky`               | -                                                                         |
-| <Aa className="fg:blue" />`text-blue`             | information, links                                                        |
-| <Aa className="fg:indigo" />`text-indigo`         | -                                                                         |
-| <Aa className="fg:violet" />`text-violet`         | -                                                                         |
-| <Aa className="fg:purple" />`text-purple`         | -                                                                         |
-| <Aa className="fg:fuchsia" />`text-fuchsia`       | -                                                                         |
-| <Aa className="fg:pink" />`text-pink`             | -                                                                         |
-| <Aa className="fg:crimson" />`text-crimson`       | -                                                                         |
-| <Aa className="fg:red" />`text-red`               | errors, danger text, remove icons                                         |
+| <Aa className="fg:gray" />`text-gray`             | neutral, subtle, muted                                                    |
+| <Aa className="fg:slate" />`text-slate`           | cool, calm, sophisticated                                                 |
+| <Aa className="fg:brown" />`text-brown`           | earthy, warm, rustic                                                      |
+| <Aa className="fg:orange" />`text-orange`         | vibrant, energetic, lively                                                |
+| <Aa className="fg:amber" />`text-amber`           | warm, glowing, radiant                                                    |
+| <Aa className="fg:yellow" />`text-yellow`         | cheerful, sunny, bright                                                   |
+| <Aa className="fg:lime" />`text-lime`             | fresh, lively, zesty                                                      |
+| <Aa className="fg:green" />`text-green`           | nature, growth, harmony                                                   |
+| <Aa className="fg:beryl" />`text-beryl`           | calm, soothing, tranquil                                                  |
+| <Aa className="fg:teal" />`text-teal`             | sophisticated, elegant, refined                                           |
+| <Aa className="fg:cyan" />`text-cyan`             | modern, futuristic, technological                                         |
+| <Aa className="fg:sky" />`text-sky`               | peaceful, serene, tranquil                                                |
+| <Aa className="fg:blue" />`text-blue`             | calm, trustworthy, reliable                                               |
+| <Aa className="fg:indigo" />`text-indigo`         | mysterious, deep, spiritual                                               |
+| <Aa className="fg:violet" />`text-violet`         | creative, imaginative, magical                                            |
+| <Aa className="fg:purple" />`text-purple`         | royal, luxurious, majestic                                                |
+| <Aa className="fg:fuchsia" />`text-fuchsia`       | vibrant, bold, playful                                                    |
+| <Aa className="fg:pink" />`text-pink`             | feminine, romantic, delicate                                              |
+| <Aa className="fg:crimson" />`text-crimson`       | passionate, intense, powerful                                             |
+| <Aa className="fg:red" />`text-red`               | bold, energetic, attention-grabbing                                       |
 
 <details>
     <summary>View the default variables</summary>
