Update base and text colors documentation

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -1,5 +1,5 @@
 ## Default [sr-only]
-| Variable Token                                    | Keywords                                                                  |
+| Token                                             | Keywords                                                                  |
 |---------------------------------------------------|---------------------------------------------------------------------------|
 | <small>Semantic</small>                                                                                                       |
 | <Bg className="bg:base" />`base`                  | background for page, modal                                                |
@@ -42,6 +42,7 @@ By default, theme modes [drive](/docs/configuration#themedriver) base color vari
     <div class="bg:yellow"></div>
 </div>
 ```
+[View the default variables on GitHub](https://github.com/master-co/css/blob/rc/packages/css/src/config/variables.ts)
 
 ---
 
