Add Design Variables category to roadmap

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -36,41 +36,13 @@ Our goal for our upcoming v2 docs is to present a comprehensive and elegantly cr
     <div>
         <table>
             <Documents category='Getting Started' first />
-            <Documents category='Installation' />
             <Documents category='Syntax Tutorial' />
             <Documents category='Fundamentals' />
             <Documents category='Production Optimization' />
+            <Documents category='Design Variables' />
             <Documents category='Configuration' />
             <Documents category='API Reference' />
-            <Documents category='API Reference' />
-            <Documents category='Accessibility' />
-            <Documents category='Animation' />
-            <Documents category='Appearance' />
-            <Documents category='Background' />
-            <Documents category='Border' />
-            <Documents category='Effect' />
-            <Documents category='Flex' />
-            <Documents category='Font' />
-            <Documents category='Grid' />
-            <Documents category='Grid And Flexbox' />
-            <Documents category='Interactivity' />
-            <Documents category='Layout' />
-            <Documents category='List Style' />
-            <Documents category='Media' />
-            <Documents category='Outline' />
-            <Documents category='Performance' />
-            <Documents category='Scroll' />
-            <Documents category='Shape' />
-            <Documents category='Dimensions' />
-            <Documents category='Spacing' />
-            <Documents category='Svg' />
-            <Documents category='Tables' />
-            <Documents category='Text' />
-            <Documents category='Transform' />
-            <Documents category='Transition' />
-            <Documents category='Typography' />
-            <Documents category='Variable' />
-            <Documents category='Visibility' />
+            <Documents category='Syntax' />
         </table>
         <p className="flex gap:10 text:12">
             <b>🟢 Completed</b>
