Update CSS classes in content.mdx files

--- a/website/app/[locale]/(root)/docs/break-before/content.mdx
+++ b/website/app/[locale]/(root)/docs/break-before/content.mdx
@@ -5,7 +5,7 @@
 ### Set the break before behavior
 Use `break-before:value` to set how breaks should behave before a generated box.
 <Demo className="py:0!">
-    <div className="bg:white@light bg:gray-20@dark p:30">
+    <div className="bg:float p:8x">
         <div className="gap:30 cols:2">
             <div className="f:28 f:bold">Briefs</div>
             <p>A content brief is a document that outlines the key details of a piece of content. It should include an overview of the project, a well as any specific instructions or requirements. </p>
