--- a/website/app/[locale]/(root)/docs/z-index/content.mdx
+++ b/website/app/[locale]/(root)/docs/z-index/content.mdx
@@ -3,7 +3,7 @@
 
 Use `z-index:value` to order of overlapping eleemnts. Value is an integer that can be positive, negative or zero.
 <Demo className="py:0">
-    <div className="flex ml:-8>div p:30">
+    <div className="flex ml:-8>div p:8x">
         <div className="z:9 box bg:blue-58! fg:white b:2">1</div>
         <div className="z:3 box bg:blue-58! fg:white b:2">2</div>
         <div className="z:1 box bg:blue-58! fg:white b:2">3</div>
