Add description for Master CSS in content.mdx

--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -1,4 +1,8 @@
+
+---
+
 ## What is Master CSS?
+Master CSS is a markup-driven CSS language with smart rules allowing you to write familiar CSS using concise syntax within HTML.
 
 ---
 
